--- a/viewer/webgl/main.html
+++ b/viewer/webgl/main.html
@@ -131,7 +131,8 @@
 			}
 
 			float turbulence(vec3 v){
-				return 0.6+(sn(v*3.)/3.+sn(v*9.)/9.+sn(v*27.)/27.);
+				return sn(v*9.)/9.;
+				//return 0.6+(sn(v*3.)/3.+sn(v*9.)/9.+sn(v*27.)/27.);
 			}
 			void main() {
 				vec3 w = worldpos;
@@ -290,7 +291,8 @@
 				return 48.0 * dot(s, t);
 			}
 			float turbulence(vec3 v){
-				return 0.5+(sn(v*3.)/3.+sn(v*6.)/6.+sn(v*12.)/12.)+sn(v*19.)/19.;
+				return 0.5+sn(v*6.)/6.;
+				//return 0.5+(sn(v*3.)/3.+sn(v*6.)/6.+sn(v*12.)/12.)+sn(v*19.)/19.;
 			}
 			void main() {
 				vec2 p = 2.*(gl_PointCoord-vec2(.5));
