Der WebGL-Renderer kann jetzt Planetenlabels.

--- a/viewer/webgl/main.html
+++ b/viewer/webgl/main.html
@@ -11,6 +11,7 @@
 		<script type="text/javascript" src="jsonparse.js"></script>
 		<script type="text/javascript" src="slots.js"></script>
 		<script type="text/javascript" src="textures.js"></script>
+		<script type="text/javascript" src="text.js"></script>
 		<style type="text/css">
 			body {
 				background-color: #000000;
